--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,103 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 .header {
   background: url(../img/headers.jpg) center center no-repeat;
+  max-width: 1920px;
 }
-.sale {
-  background: url(../img/hot-tours.jpg) center center no-repeat;
-  background-size: cover;
+
+.subscribe {
+  background: url(../img/subscribe.jpg) top right no-repeat;;
+  max-width: 1920px;
+  position: relative;
+  z-index: 5;
+}
+
+.subscribe::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 400px;
+  background-color: rgba(14, 165, 233, 0.35);
+  z-index: 10;
+}
+
+@keyframes waves {
+  0% {
+    width: calc(103% + 1.3px);
+  }
+  50% {
+    width: calc(150% + 1.3px);
+  }
+  100% {
+    width: calc(103% + 1.3px);
+  }
+}
+
+.custom-shape-divider-top-1631693681 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  z-index: 15;
+}
+
+.custom-shape-divider-top-1631693681 svg {
+  position: relative;
+  display: block;
+  width: calc(103% + 1.3px);
+  height: 81px;
+  animation: waves 10s linear infinite;
+
+}
+
+.custom-shape-divider-top-1631693681 .shape-fill {
+  fill: #FFFFFF;
+}
+
+.custom-shape-divider-bottom-1631693646 {
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 103%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+  z-index: 15;
+}
+
+.custom-shape-divider-bottom-1631693646 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 81px;
+  animation: waves 11s linear infinite;
+}
+
+.custom-shape-divider-bottom-1631693646 .shape-fill {
+  fill: #FFFFFF;
 }
 
 .chek {
   background: url(../img/chek.png) top left no-repeat;
   padding-left: 40px;
+}
+@media (min-width: 768px) {
+.sale {
+  background: url(../img/hot-tours.jpg) center center no-repeat;
+  background-size: cover;
+  max-width: 1920px;
+}
 }
 
 @tailwind base;
